# Bag_OF_Visual_Words

./: CMakeLists.txt  README.md
include/: codebook.hpp  features.hpp  histbook.hpp  serialization.hpp
src/: CMakeLists.txt  codebook.cpp  features.cpp  histbook.cpp  main.cpp  preprocess_and_serialize.cpp  serialization.cpp
